# path_planning_ompl

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPython.cmake
scripts/: build_boost.sh  render_gif.py
src/: generate_ply.cpp  main.cpp  ply.cpp  ply.h
